# backend/src/presentation/schemas/sessionCreate.js
@@ -1,0 +1,8 @@
+const Joi = require('joi');
+
+const sessionSchema = Joi.object({
+    email: Joi.string().email().required(),
+    password: Joi.string().required(),
+});
+
+module.exports = sessionSchema;
